# fcitx5-vinput

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_zh.md  messages.mo
.codex/: notes.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
i18n/: vinput-gui_zh_CN.ts
packaging/arch/: PKGBUILD.in
po/: CMakeLists.txt  fcitx5-vinput.pot  zh_CN.po  zh_CN.po~
scripts/: create-source-archive.sh  render-arch-pkgbuild.sh
src/addon/: CMakeLists.txt  vinput-addon.conf.in  vinput.cpp  vinput.h
src/cli/: CMakeLists.txt  cli_context.h  command_config.cpp  command_config.h  command_daemon.cpp  command_daemon.h  command_device.cpp  command_device.h  command_hotword.cpp  command_hotword.h  command_init.cpp  command_init.h  command_llm.cpp  command_llm.h  command_model.cpp  command_model.h  command_scene.cpp  command_scene.h  command_status.cpp  command_status.h  dbus_client.cpp  dbus_client.h  editor_utils.cpp  editor_utils.h  formatter.cpp  formatter.h  i18n.h  main.cpp  progress.cpp  progress.h  systemd_client.cpp  systemd_client.h
src/common/: CMakeLists.txt  config.h.in  config_path.cpp  config_path.h  core_config.cpp  core_config.h  dbus_interface.h  file_utils.cpp  file_utils.h  i18n.cpp  i18n.h  model_manager.cpp  model_manager.h  model_repository.cpp  model_repository.h  path_utils.cpp  path_utils.h  pipewire_device.cpp  pipewire_device.h  postprocess_scene.cpp  postprocess_scene.h  recognition_result.cpp  recognition_result.h  vinput_config.cpp  vinput_config.h
src/daemon/: CMakeLists.txt  asr_engine.cpp  asr_engine.h  audio_capture.cpp  audio_capture.h  dbus_service.cpp  dbus_service.h  main.cpp  model_manager.h  post_processor.cpp  post_processor.h
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
